--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <main id="container">
+        <section id="phone">
+            <iframe src="home.html" frameborder="0" id="screen" name="screen"></iframe>
+        </section>
+        <section id="social-networks">
+
+        </section>
+    </main>
 </body>
 </html>
