--- a/index.html
+++ b/index.html
@@ -11,10 +11,24 @@
 <body>
     <main id="container">
         <section id="phone">
-            <iframe src="home.html" frameborder="0" id="screen" name="screen"></iframe>
+            <iframe src="home.html" frameborder="0" id="screen" name="screen">
+                <p>Seu navegador não é compatível.</p>
+            </iframe>
         </section>
         <section id="social-networks">
-
+            <a href="imagens/tela-home.jpg" target="screen" rel="noopener noreferrer">
+                <img src="imagens/logo-home.jpg" alt="Home">
+            </a>
+            <a href="imagens/tela-github.jpg" target="screen" rel="noopener noreferrer">
+                <img src="imagens/logo-github.jpg" alt="GitHub"></a>
+            <a href="imagens/tela-instagram.jpg" target="screen" rel="noopener noreferrer">
+                <img src="imagens/logo-instagram.jpg" alt="Instagram"></a>
+            <a href="imagens/tela-facebook.jpg" target="screen" rel="noopener noreferrer">
+                <img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
+            <a href="imagens/tela-youtube.png" target="screen" rel="noopener noreferrer">
+                <img src="imagens/logo-youtube.jpg" alt="YouTube"></a>
+            <a href="imagens/tela-twitter.jpg" target="screen" rel="noopener noreferrer">
+                <img src="imagens/logo-twitter.jpg" alt="Twitter"></a>
         </section>
     </main>
 </body>
