added more pages

--- a/index.html
+++ b/index.html
@@ -11,23 +11,22 @@
 <body>
     <main id="container">
         <section id="phone">
-            <iframe src="home.html" frameborder="0" id="screen" name="screen">
+            <iframe src="pages/home.html" frameborder="0" id="screen" name="screen">
                 <p>Seu navegador não é compatível.</p>
             </iframe>
         </section>
         <section id="social-networks">
-            <a href="imagens/tela-home.jpg" target="screen" rel="noopener noreferrer">
-                <img src="imagens/logo-home.jpg" alt="Home">
-            </a>
-            <a href="imagens/tela-github.jpg" target="screen" rel="noopener noreferrer">
+            <a href="pages/home.html" target="screen" rel="noopener noreferrer">
+                <img src="imagens/logo-home.jpg" alt="Home"></a>
+            <a href="pages/github.html" target="screen" rel="noopener noreferrer">
                 <img src="imagens/logo-github.jpg" alt="GitHub"></a>
-            <a href="imagens/tela-instagram.jpg" target="screen" rel="noopener noreferrer">
+            <a href="pages/instagram.html" target="screen" rel="noopener noreferrer">
                 <img src="imagens/logo-instagram.jpg" alt="Instagram"></a>
-            <a href="imagens/tela-facebook.jpg" target="screen" rel="noopener noreferrer">
+            <a href="pages/facebook.html" target="screen" rel="noopener noreferrer">
                 <img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
-            <a href="imagens/tela-youtube.png" target="screen" rel="noopener noreferrer">
+            <a href="pages/youtube.html" target="screen" rel="noopener noreferrer">
                 <img src="imagens/logo-youtube.jpg" alt="YouTube"></a>
-            <a href="imagens/tela-twitter.jpg" target="screen" rel="noopener noreferrer">
+            <a href="pages/twitter.html" target="screen" rel="noopener noreferrer">
                 <img src="imagens/logo-twitter.jpg" alt="Twitter"></a>
         </section>
     </main>
