--- a/pages/home.html
+++ b/pages/home.html
@@ -16,9 +16,8 @@
         body {
             max-width: 100vw;
             max-height: 100vh;
-            background: url('imagens/tela-home.jpg') no-repeat center/cover fixed;
+            background: url('../imagens/tela-home.jpg') no-repeat center/cover fixed;
         }
-
     </style>
 </head>
 <body>
